# spacegl

./: .gitignore  .spacegl.spec.kate-swp  CMakeLists.txt  HOWTO.txt  Makefile  Niklaus.md  README.md  README_it.md  changelog  comments.txt  local_check.sh  rpkg.conf  run_client.sh  run_server.sh  spacegl-client  spacegl-diag  spacegl-server  spacegl.desktop  spacegl.spec  spacegl_3dview  spacegl_client  spacegl_client.sh  spacegl_diag.sh  spacegl_hud  spacegl_new_release.sh  spacegl_new_revision.sh  spacegl_server  spacegl_server.sh  spacegl_viewer  spacegl_vulkan  spacegl_vulkan.sh  symbols.txt  update_readme.sh
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
_srpm_test/: spacegl.spec
assets/shaders/: bloom.frag  particles.comp  particles.frag  particles.vert  shader.frag  shader.vert  tonemap.frag
include/: game_config.h  game_state.h  network.h  server_internal.h  shared_state.h  spacegl_extras_glfw.h  spacegl_extras_vulkan.h  spacegl_vulkan_types.h  telemetry.h  ui.h
man/man1/: spacegl-diag.1  spacegl_3dview.1  spacegl_client.1  spacegl_client.sh.1  spacegl_diag.1  spacegl_hud.1  spacegl_server.1  spacegl_server.sh.1  spacegl_telemetry.1  spacegl_viewer.1  spacegl_vulkan.1
readme_assets/: README_assets.txt
src/: glut_compat.c  glut_compat.h  spacegl_3dview.c  spacegl_client.c  spacegl_diag.c  spacegl_diag_shm.c  spacegl_extras_glfw.c  spacegl_hud.c  spacegl_server.c  spacegl_telemetry.c  spacegl_viewer.c  spacegl_vulkan.c  spacegl_vulkan_extras.inl  telemetry_server.c
src/server/: commands.c  galaxy.c  globals.c  logic.c  net.c  threadpool.c
